--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </title>
   </head>
   <body>
+    <div>
     <a href="reader.html">Main Page</a>
+    </div>
+    <div><a href="C.html">Guide to C</a></div>
   </body>
 </html>
